# runtime.zero

./: .gitignore  AGENTS.md  BRAND.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SAFETY.md  SECURITY.md
assets/brand/: README.md
docs/: architecture.md  foundation-readiness.md  local-install.md  manifest-validation.md  module-system.md  roadmap.md  store-and-routing-contract.md  tui.md  website-tui-parity-backlog.md
docs/brand/: README.md
scripts/: install-local.ps1  uninstall-local.ps1
site/: README.md  index.html  styles.css  terminal.js
src/: brand.rs  color_mode.rs  dashboard_cli.rs  install_receipt.rs  install_receipt_schema.rs  installed_registry.rs  installed_registry_path.rs  launch_routing.rs  lib.rs  main.rs  module_cli.rs  module_install_plan.rs  module_manifest.rs  module_registry.rs  module_store.rs  module_validation.rs  package_integrity.rs  package_integrity_io.rs  store_cli.rs  store_init.rs  store_init_model.rs  store_init_text.rs  store_plan.rs  store_status.rs  store_status_text.rs  tui_app.rs  tui_canvas.rs  tui_command_rail.rs  tui_dashboard.rs  tui_dashboard_labels.rs  tui_layout.rs  tui_ratatui.rs  tui_ratatui_components.rs  tui_ratatui_rail.rs  tui_ratatui_support.rs  tui_render.rs  tui_render_support.rs  tui_state.rs  tui_theme.rs
tests/: cli_core.rs  install_receipt.rs  installed_registry.rs  package_integrity.rs  store_cli.rs  store_init.rs  tui_dashboard.rs  tui_ratatui.rs  tui_render.rs  tui_state.rs
tests/fixtures/install-receipts/: malformed-json.json  unsafe-path.json  unsupported-schema.json  valid.json
(+11 files in other folders)
