[package]
name = "runtime-zero"
version = "0.1.0"
edition = "2024"
authors = ["Travis J. Neuman <travis@neuman.dev>"]
description = "runtime.zero — System Management Toolkit"
license = "Apache-2.0"
repository = "https://github.com/travisjneuman/runtime.zero"
homepage = "https://rz0.neuman.dev"
readme = "README.md"
keywords = ["cli", "system", "maintenance", "scanner", "toolkit"]
categories = ["command-line-utilities"]
rust-version = "1.96"

[dependencies]
crossterm = "0.29"
ratatui = { version = "0.30", default-features = false, features = ["crossterm_0_29"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"

[[bin]]
name = "rz0"
path = "src/main.rs"

[profile.release]
lto = "thin"
strip = "symbols"
codegen-units = 1
